// To regenerate api.pb.go run hack/update-generated-kubelet-plugin-registration.sh
syntax = 'proto3';

package corestats;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;

// Usage is a set of resources consumed
message Usage {
	int64 time = 1;
	uint64 cpu_usage_nano_cores = 2;
	uint64 memory_working_set_bytes = 3;
}

// ContainerUsage is the resource usage for a single container
message ContainerUsage {
	string name = 1;
	Usage usage = 2;
}

// PodUsage is the resource usage for a pod
message PodUsage {
	string name = 1;
	string namespace = 2;
	repeated ContainerUsage containers = 3;
}

// StatsResponse is sent by plugin to kubelet in response to StatsRequest RPC
message StatsResponse {
	Usage node = 1;
	repeated PodUsage pods = 2;
}

// StatsRequest is the empty request message for Kubelet
message StatsRequest {}

message StatsInterval {
	int64 duration = 1;
}

// CoreStats is the service advertised by the kubelet for stats.
service CoreStats {
	rpc Get(StatsRequest) returns (StatsResponse) {}
	rpc Stream(StatsInterval) returns (stream StatsResponse) {}
}
